--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <br>
                 <em>EMNLP 2023</em> (<font color="#FF0000"><strong>CCF-B</strong></font>)
                 <br>
-                <a href="https://arxiv.org/abs/2310.11360">Paper</a> / <a href="https://github.com/ictnlp/SU4MT">Code</a>
+                <a href="https://aclanthology.org/2023.findings-emnlp.149/">Paper</a> / <a href="https://github.com/ictnlp/SU4MT">Code</a>
                 <br>
 
                 <br>
