--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Email: huanglanglin21s [at] ict.ac.cn 
               </p>
               <p>
-                [<a href="CV-of-Langlin-Huang.pdf">
+                [<a href="CV%20of%20Langlin%20Huang.pdf">
                   CV
                 </a>] | 
                 <a href="https://scholar.google.com/citations?hl=en&user=Mt9xdjYAAAAJ">
