--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
               <p style="text-align:center">
                 <name>Langlin Huang | 黄浪林</name>
               </p>
-              <p>I am a third-year M.S. student at Institute of Computing Technology, Chinese Academy of Sciences (<a href="http://www.ict.ac.cn/">ICT/CAS</a>), luckily advised by Prof. <a href="http://people.ucas.edu.cn/~yangfeng?language=en">Yang Feng</a> at ICT Natural Language Processing (<a href="http://nlp.ict.ac.cn/">ICTNLP</a>) group. 
-                Before that, I received my B.E. degree in Data Science and Big Data Technology from University of International Business and Economics (<a href="https://www.uibe.edu.cn/">UIBE</a>) in Jun. 2021. 
-              </p>
+              <p>I am a third-year M.S. student at Institute of Computing Technology, Chinese Academy of Sciences (<a href="http://www.ict.ac.cn/">ICT/CAS</a>), luckily advised by Prof. <a href="http://people.ucas.edu.cn/~yangfeng?language=en">Yang Feng</a> at ICT Natural Language Processing (<a href="http://nlp.ict.ac.cn/">ICTNLP</a>) group. </p>
+
+              <p> Before that, I received my B.E. degree in Data Science and Big Data Technology from University of International Business and Economics (<a href="https://www.uibe.edu.cn/">UIBE</a>) in Jun. 2021. </p>
+
+              <p>  After graduation, I will pursue a Ph.D. degree in <a href="https://wustl.edu/">Washington University in St. Louis</a> and join <a href="https://teapot123.github.io/">Jiaxin Huang</a>'s group. </p>
               <p>
-                Email: huanglanglin21s [at] ict.ac.cn 
+                <strong>Email</strong>: huanglanglin21s [at] ict.ac.cn 
               </p>
               <p>
                 [<a href="CV%20of%20Langlin%20Huang.pdf">
@@ -78,6 +80,10 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
+                <p>[2024/06] One paper about multi-scale contextualization and UTF-8 byte-based model is accepted to <strong>ACL 2024</strong>! Thanks to all collaborators!</p>
+                <p>[2024/05/21] <strong>I successfully defended my dessertation for Master degree!</strong> 
+                  My dessertation name is "A Study of Neural Machine Translation on Multiple Semantic Granularities (基于多语义粒度的神经机器翻译研究)".
+                </p>
                 <p>[2023/10] One paper about semantic-level sentence representation is accepted to <strong>EMNLP 2023</strong>! Thanks to all collaborators!</p>
                 <p>[2023/06] Our LLM <strong>BayLing (百聆)</strong> is released! BayLing is an instruction-following LLM with advanced language alignment and multi-turn interaction capability. Read our <a href="https://arxiv.org/abs/2306.10968">paper</a> and try our <a href="http://nlp.ict.ac.cn/bayling/demo/">online demo</a>! Thanks to all collaborators! </p>
                 <p>[2022/12] One patent about improving label smoothing in training translation models is published! Check the report <a href="http://epub.cnipa.gov.cn/patent/CN115455993A">here</a>. </p>
@@ -94,6 +100,20 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
                 <heading>Publications</heading><br>
+
+                <br>
+                <subheading>2024</subheading>
+                <br>
+
+                <br>
+                  <papertitle>Integrating Multi-scale Contextualized Information for Byte-based Neural Machine Translation</papertitle>
+                <br>
+                <strong>Langling Huang</strong>, Yang Feng
+                <br>
+                <em>ACL 2024</em> (<font color="#FF0000"><strong>CCF-A</strong></font>)
+                <br>
+                <a href="https://arxiv.org/html/2405.19290v1">Paper</a> / <a href="https://github.com/ictnlp/Multiscale-Contextualization">Code</a>
+                <br>
 
                 <br>
                 <subheading>2023</subheading>
@@ -208,7 +228,7 @@
                             <br>
                             <br>
                             </p><div style="float:left;">
-                            Updated at Dec. 2023
+                            Updated at Jun. 2024
                             </div>
                             <div style="float:right;">
                             <a href="https://jonbarron.info">Template</a>
