--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
               <p style="text-align:center">
                 <name>Langlin Huang | 黄浪林</name>
               </p>
-              <p>I am a third-year M.S. student at Institute of Computing Technology, Chinese Academy of Sciences (<a href="http://www.ict.ac.cn/">ICT/CAS</a>), luckily advised by Prof. <a href="http://people.ucas.edu.cn/~yangfeng?language=en">Yang Feng</a> at ICT Natural Language Processing (<a href="http://nlp.ict.ac.cn/">ICTNLP</a>) group. </p>
+              <p>I am a first-year PhD student at Washington University in St. Louis (<a href="https://wustl.edu/">WUSTL</a>), luckily advised by Prof. <a href="https://teapot123.github.io/">Jiaxin Huang</a>. </p>
 
-              <p> Before that, I received my B.E. degree in Data Science and Big Data Technology from University of International Business and Economics (<a href="https://www.uibe.edu.cn/">UIBE</a>) in Jun. 2021. </p>
-
-              <p>  After graduation, I will pursue a Ph.D. degree in <a href="https://wustl.edu/">Washington University in St. Louis</a> and join <a href="https://teapot123.github.io/">Jiaxin Huang</a>'s group. </p>
+              <p>Before that, I received my Mater degree at Institute of Computing Technology, Chinese Academy of Sciences (<a href="http://www.ict.ac.cn/">ICT/CAS</a>) in Jul. 2024, where I was advised by Prof. <a href="http://people.ucas.edu.cn/~yangfeng?language=en">Yang Feng</a> at ICT Natural Language Processing (<a href="http://nlp.ict.ac.cn/">ICTNLP</a>) group. I received my B.E. degree in Data Science and Big Data Technology from University of International Business and Economics (<a href="https://www.uibe.edu.cn/">UIBE</a>) in Jun. 2021.</p>
               <p>
-                <strong>Email</strong>: huanglanglin21s [at] ict.ac.cn 
+                <strong>Email</strong>: h.langlin [at] wustl.edu 
               </p>
               <p>
                 [<a href="CV%20of%20Langlin%20Huang.pdf">
