--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
+                <p>[2024/08] My new journey set sails, I will focus on a wide variety of LLM generation related topics. I will also track the up-to-date researches about machine translation and tokenization.
                 <p>[2024/06] One paper about multi-scale contextualization and UTF-8 byte-based model is accepted to <strong>ACL 2024</strong>! Thanks to all collaborators!</p>
                 <p>[2024/05/21] <strong>I successfully defended my dessertation for Master degree!</strong> 
                   My dessertation name is "A Study of Neural Machine Translation on Multiple Semantic Granularities (基于多语义粒度的神经机器翻译研究)".
