--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </p>
               <p>I am a first-year PhD student at Washington University in St. Louis (<a href="https://wustl.edu/">WUSTL</a>), luckily advised by Prof. <a href="https://teapot123.github.io/">Jiaxin Huang</a>. </p>
 
-              <p>Before that, I received my Mater degree at Institute of Computing Technology, Chinese Academy of Sciences (<a href="http://www.ict.ac.cn/">ICT/CAS</a>) in Jul. 2024, where I was advised by Prof. <a href="http://people.ucas.edu.cn/~yangfeng?language=en">Yang Feng</a> at ICT Natural Language Processing (<a href="http://nlp.ict.ac.cn/">ICTNLP</a>) group. I received my B.E. degree in Data Science and Big Data Technology from University of International Business and Economics (<a href="https://www.uibe.edu.cn/">UIBE</a>) in Jun. 2021.</p>
+              <p>Before that, I received my Master degree at Institute of Computing Technology, Chinese Academy of Sciences (<a href="http://www.ict.ac.cn/">ICT/CAS</a>) in Jul. 2024, where I studied at ICT Natural Language Processing (<a href="http://nlp.ict.ac.cn/">ICTNLP</a>) group. I received my B.E. degree in Data Science and Big Data Technology from University of International Business and Economics (<a href="https://www.uibe.edu.cn/">UIBE</a>) in Jun. 2021.</p>
               <p>
                 <strong>Email</strong>: h.langlin [at] wustl.edu 
               </p>
@@ -59,13 +59,13 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research interests mainly lie in natural language processing and machine translation. Particularly, I am interested in: 
+                My research interests mainly lie in Natural Language Processing and Large Language Models. Particularly, I am interested in: 
                 <ul>
                   <li>
-                    Representations in various text granularities, and the application on Translation Models / Language Models.
+                    Efficient language model generation. Efficient in-context learning.
                   </li>
                   <li>
-                    Large language models (LLMs) for machine translation / multilingual ability of LLMs.
+                    Multilingual large language model. Machine Translation.
                   </li>
                 </ul>
                 
@@ -78,10 +78,10 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
-                <p>[2024/08] My new journey set sails, I will focus on a wide variety of LLM generation related topics. I will also track the up-to-date researches about machine translation and tokenization.
+                <p>[2024/08] My new journey set sail, I will focus on a wide variety of LLM generation-related topics. I will also track the up-to-date research about machine translation and tokenization.
                 <p>[2024/06] One paper about multi-scale contextualization and UTF-8 byte-based model is accepted to <strong>ACL 2024</strong>! Thanks to all collaborators!</p>
-                <p>[2024/05/21] <strong>I successfully defended my dessertation for Master degree!</strong> 
-                  My dessertation name is "A Study of Neural Machine Translation on Multiple Semantic Granularities (基于多语义粒度的神经机器翻译研究)".
+                <p>[2024/05/21] <strong>I successfully defended my dissertation for Master degree!</strong> 
+                  My dissertation name is "A Study of Neural Machine Translation on Multiple Semantic Granularities (基于多语义粒度的神经机器翻译研究)".
                 </p>
                 <p>[2023/10] One paper about semantic-level sentence representation is accepted to <strong>EMNLP 2023</strong>! Thanks to all collaborators!</p>
                 <p>[2023/06] Our LLM <strong>BayLing (百聆)</strong> is released! BayLing is an instruction-following LLM with advanced language alignment and multi-turn interaction capability. Read our <a href="https://arxiv.org/abs/2306.10968">paper</a> and try our <a href="http://nlp.ict.ac.cn/bayling/demo/">online demo</a>! Thanks to all collaborators! </p>
@@ -151,6 +151,23 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Preprint</heading><br>
+              <br>
+                <subheading>2024</subheading>
+              <br>
+              <br>
+                <papertitle>Divide, Reweight, and Conquer: A Logit Arithmetic Approach for In-Context Learning</papertitle>
+              <br>
+              Chengsong Huang, <strong>Langlin Huang</strong>, Jiaxin Huang
+              <br>
+              <a href="https://arxiv.org/pdf/2410.10074">Paper</a> / <a href="https://github.com/Chengsong-Huang/LARA">Code</a>
+
+              <br>
+                <papertitle>Divide, Reweight, and Conquer: A Logit Arithmetic Approach for In-Context Learning</papertitle>
+              <br>
+              <strong>Langlin Huang</strong>, Mengyu Bu, Yang Feng
+              <br>
+              <a href="https://github.com/ictnlp/MoCE">Code</a>
+            
               <br>
                 <subheading>2023</subheading>
               <br>
@@ -227,7 +244,7 @@
                             <br>
                             <br>
                             </p><div style="float:left;">
-                            Updated at Jun. 2024
+                            Updated at Nov. 2024
                             </div>
                             <div style="float:right;">
                             <a href="https://jonbarron.info">Template</a>
