--- a/index.html
+++ b/index.html
@@ -154,20 +154,21 @@
               <br>
                 <subheading>2024</subheading>
               <br>
+            
               <br>
                 <papertitle>Divide, Reweight, and Conquer: A Logit Arithmetic Approach for In-Context Learning</papertitle>
               <br>
               Chengsong Huang, <strong>Langlin Huang</strong>, Jiaxin Huang
               <br>
               <a href="https://arxiv.org/pdf/2410.10074">Paper</a> / <a href="https://github.com/Chengsong-Huang/LARA">Code</a>
-
+              <br><br>
               <br>
-                <papertitle>Divide, Reweight, and Conquer: A Logit Arithmetic Approach for In-Context Learning</papertitle>
+                <papertitle>MoCE: Adaptive Mixture of Contextualization Experts for Byte-based Neural Machine Translation</papertitle>
               <br>
               <strong>Langlin Huang</strong>, Mengyu Bu, Yang Feng
               <br>
               <a href="https://github.com/ictnlp/MoCE">Code</a>
-            
+              <br><br>
               <br>
                 <subheading>2023</subheading>
               <br>
@@ -231,7 +232,7 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Services</heading>
-              <p><strong>Reviewer:</strong> ACL 2023, ARR 2023 Oct., TALLIP</p>
+              <p><strong>Reviewer:</strong> ACL Rolling Review, ACL 2023, TALLIP</p>
             </td>
           </tr>
         </tbody></table>
