--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
   <title>Langlin Huang</title>
   
-  <meta name="author" content="Langlin Huang @ ICT/CAS">
+  <meta name="author" content="Langlin Huang @ WashU">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="GgupS3Ka8a6jG2twlL_Wu9yWUz3BXfucxf9OjvqYpPU" />
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/ict.png">
+  <link rel="icon" type="image/png" href="images/washu.png">
 </head>
 
 <body>
@@ -167,7 +167,7 @@
               <br>
               <strong>Langlin Huang</strong>, Mengyu Bu, Yang Feng
               <br>
-              <a href="https://github.com/ictnlp/MoCE">Code</a>
+              <a href="https://arxiv.org/pdf/2411.01474">Paper</a> / <a href="https://github.com/ictnlp/MoCE">Code</a>
               <br><br>
               <br>
                 <subheading>2023</subheading>
