--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="GgupS3Ka8a6jG2twlL_Wu9yWUz3BXfucxf9OjvqYpPU" />
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/washu.png">
+  <link rel="icon" type="image/png" href="images/washu.jpg">
 </head>
 
 <body>
